--- a/styles/scss/1.2.subscribe.scss
+++ b/styles/scss/1.2.subscribe.scss
@@ -1,9 +1,8 @@
 .subscribe-cards-container {
-    margin: 0;
-    padding: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-transform: uppercase;
     @media (min-width: 768px) {
             flex-direction: row;
             flex-wrap: wrap; 
@@ -12,10 +11,12 @@
 }
 
 .card-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 280px;
     height: 460px;
     background-repeat: no-repeat;
-    background-position: center;
     background-size: contain;
     @media (min-width: 1280px) {
         width: 350px;
@@ -24,6 +25,8 @@
 }
 
 .subsribe-description-holster {
+    display: flex;
+    flex-direction: column;
     margin-top: auto;
     margin-bottom: 15px;
     height: 240px;
@@ -34,6 +37,11 @@
         height: 230px;
         width: 300px;
     }
+}
+
+.subsribe-description {
+    text-transform: none;
+    font-size: 11px;
 }
 
 .bg-free {
