--- a/styles/scss/1.3.latestnews.scss
+++ b/styles/scss/1.3.latestnews.scss
@@ -1,9 +1,9 @@
 .news-aricle-container {
+    display: flex;
     margin-top: 50px;
     flex-direction: column;
     @media (min-width: 768px) {
         flex-direction: row;
-        justify-content: space-between;
     }
     &>div:first-child {
         @media (min-width: 768px) {
@@ -13,6 +13,8 @@
 }
 
 .news-txt-container {
+    display: flex;
+    flex-direction: column;
     width: 280px;
     justify-content: space-evenly;
     @media (min-width: 768px) {
@@ -40,11 +42,11 @@
 }
 
 .releas-data-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     width: 280px;
     @media (min-width: 768px) {
-        width: 230px;
-    }
-    @media (min-width: 1024px) {
         width: 230px;
     }
 }
@@ -62,20 +64,4 @@
 
 .text-grey {
     color: $palette-search-form-background;
-}
-
-.news-button {
-    width: 280px;
-    justify-content: center;
-    border: 4px solid #FFFFFF;
-    box-sizing: border-box;
-    border-radius: 4px;
-    color: $palette-search-form-background;
-    @media (min-width: 768px) {
-        width: 230px;
-    }
-    @media (min-width: 1024px) {
-        width: 130px;
-        height: 40px;
-    }
 }
