--- a/styles/scss/1.4.mobileapplication.scss
+++ b/styles/scss/1.4.mobileapplication.scss
@@ -1,4 +1,6 @@
 .mobile-application-container {
+    display: flex;
+    align-items: center;
     flex-direction: column-reverse;
     @media (min-width: 768px) {
         flex-direction: row;
