--- a/styles/scss/_header.scss
+++ b/styles/scss/_header.scss
@@ -1,28 +1,32 @@
 .header-container {
-    position: absolute;
-    left: 0;
-    right: 0;
-    max-width: 1200px;
-    min-height: 170px;
+    font-size: 11px;
+    line-height: 150%;
+    display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: baseline;
+    text-transform: uppercase;
+    min-height: 170px;
     @media (min-width: 1024px) {
         min-height: 30px;
         width: 900px;
         flex-direction: row;
         align-items: center;
     }
+    @media (min-width: 1280px) {
+        width: 1200px;
+    }
 }
 
-.order-desk {
-    @media (min-width: 1024px) {
-        order: 0;
-    } 
+.position-absolute {
+    position: absolute;
+    left: 0;
+    right: 0;
 }
 
 .site-logo-container {
-    width: 83px;
+    display: flex;
+    align-items: center;
 }
 
 .site-logo-order-sm {
@@ -51,12 +55,12 @@
 }
 
 .site-navigation-container {
+    display: flex;
     @media (max-width: 1024px) {
         margin: 0;
         padding: 0;
+        flex-direction: column;
     }
-
-    flex-direction: column;
     @media (min-width: 1024px) {
         margin-left: 20px;
         flex-direction: row;
@@ -67,7 +71,6 @@
 
 .site-navigation-link {
     color: $palette-is-not-active-link;
-    line-height: 150%;
     &:hover {
         color: $palette-is-active-link;
     }
