--- a/styles/scss/app.scss
+++ b/styles/scss/app.scss
@@ -21,6 +21,14 @@ body {
     color: $palette-text-primary;
 }
 
+ul {
+    list-style-type: none;
+}
+
+a {
+    text-decoration: none;
+}
+
 .wrapper {
     margin: auto;
     @media (max-width: 320px) {
@@ -47,6 +55,10 @@ body {
     @media (min-width: 1280px) {
         width: 1200px;
     }
+}
+
+.mr5 {
+    margin-right: 5px;
 }
 
 .pt250 {
@@ -102,13 +114,18 @@ body {
     margin-bottom: 40px;
 }
 
+.p-l-r40 {
+    @media (min-width: 1024px) {
+        padding: 0 40px;
+    }
+}
+
 .m-auto {
     margin: auto;
 }
 
 .bg-layout-cover-norepeat-position-center {
     background-position: center;
-    background-repeat: no-repeat;
     background-size: cover;
 } 
 
