--- a/styles/scss/buttons.scss
+++ b/styles/scss/buttons.scss
@@ -7,7 +7,7 @@
 }
 
 
-.acces-form-button {
+.access-form-button {
     border-radius: 3px;
     background-color: $palette-button-access;
     @media (min-width: 768px) {
@@ -25,6 +25,23 @@
     border-radius: 4px;
     @media (min-width: 1280px) {
         width: 300px;
+    }
+}
+
+.news-button {
+    display: flex;
+    width: 280px;
+    justify-content: center;
+    border: 4px solid #FFFFFF;
+    box-sizing: border-box;
+    border-radius: 4px;
+    color: $palette-search-form-background;
+    @media (min-width: 768px) {
+        width: 230px;
+    }
+    @media (min-width: 1024px) {
+        width: 130px;
+        height: 40px;
     }
 }
 
