--- a/styles/scss/fonts.scss
+++ b/styles/scss/fonts.scss
@@ -1,4 +1,5 @@
 h1 {
+    text-transform: uppercase;
     font-size: 30px;
     @media (min-width: 1280px) {
         font-size: 60px;
@@ -6,6 +7,7 @@ h1 {
 }
 
 h2 {
+    text-transform: uppercase;
     font-size: 20px;
     @media (min-width: 768px) {
        font-size: 29px;
