--- a/styles/scss/1.1.mainpageaccess.scss
+++ b/styles/scss/1.1.mainpageaccess.scss
@@ -5,19 +5,28 @@ input[type="text"]::-webkit-input-placeholder {
 .main-page-access-container {
     text-align: center;
     text-transform: uppercase;
-    @media (max-width: 425px) {
+    @include max-media(ms) {
         padding-top: 70px;
         padding-bottom: 50px;
     }
-    @media (max-width: 768px) {
+}
+
+.main-page-access-container-m {
+    @include max-media(m) {
         padding-top: 130px;
         padding-bottom: 100px;
     }
-    @media (max-width: 1024px) {
+}
+
+.main-page-access-container-ml {
+    @include max-media(ml) {
         padding-top: 170px;
         padding-bottom: 200px;
     }
-    @media (min-width: 1024px) {
+}
+
+.main-page-access-container-l {
+    @include media(ml) {
         padding-top: 230px;
         padding-bottom: 250px;
     }
@@ -30,9 +39,6 @@ input[type="text"]::-webkit-input-placeholder {
         max-width: 570px;
         width: 280px;
         flex-wrap: wrap;
-        @media (min-width: 768px) {
-            width: 570px;
-        }
     }
     &-inputs {
         margin-bottom: 20px;
@@ -51,3 +57,8 @@ input[type="text"]::-webkit-input-placeholder {
     }
 }
 
+.main-page-access-form-container-m {
+    @include media(m) {
+        width: 570px;
+    }
+}
