--- a/styles/scss/2.1.musicianpreview.scss
+++ b/styles/scss/2.1.musicianpreview.scss
@@ -7,7 +7,15 @@
     margin-top: 40px;
     min-height: 150px;
     width: 100%;
+    display: flex;
     flex-wrap: wrap;   
+}
+
+.h-mob20-desk16 {
+    height: 20px;
+    @include media(ml) {
+        height: 16px;
+    }
 }
 
 .ml15 {
