--- a/styles/scss/2.2.populartracks.scss
+++ b/styles/scss/2.2.populartracks.scss
@@ -2,6 +2,8 @@
     margin: 0;
     padding: 0;
     max-width: 600px;
+    display: flex;
+    flex-direction: column;
     @media (min-width: 768px) {
         min-width: 280px;
     }
@@ -24,12 +26,21 @@
 .popular-tracks-sec {
     min-width: 280px;
     max-width: 600px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.popular-tracks-link-styles {
+    display: flex;
+    justify-content: start;
+    align-items: center;
 }
 
 .h-mob50-desk55 {
     height: 50px;
     width: 50px;
-    @media (min-width: 768px) {
+    @include media(md) {
         height: 55px;
     }
 }
@@ -57,6 +68,8 @@
 .popular-tracks-cover {
     padding-top: 50px;
     width: 280px;
+    display: flex;
+    justify-content: space-between;
     flex-wrap: wrap;
     @media (min-width: 768px) {
         width: 600px;
