--- a/styles/scss/2.3.diskography.scss
+++ b/styles/scss/2.3.diskography.scss
@@ -7,6 +7,7 @@
     margin: 0;
     margin-top: 50px;
     padding: 0;
+    display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     @media (min-width: 1280px) {
@@ -24,7 +25,6 @@
 .diskography-album-container {
     height: 250px;
     width: 130px;
-    align-content: stretch;
     line-height: 23px;
     @media (min-width: 425px) {
         height: 300px;
@@ -44,6 +44,7 @@
     &-container {
         height: 130px;
         width: 130px;
+        display: flex;
         align-items: flex-end;
         @media (min-width: 768px) {
             height: 200px;
@@ -54,7 +55,6 @@
             width: 250px;
         }
     }
-    
     &-brother-album {
         background: url("../images/Brother.png");
         background-size: cover;
@@ -65,6 +65,7 @@
     }
     &-letter-from-egypt-album {
         background: url("../images/Letter_from_Egypt.png");
+        background-size: cover;
     }
     &-vogts-villa-album {
         background: url("../images/Vogts_Villa.png");
@@ -80,7 +81,7 @@
     }
 }
 
-.button-albums {
+.play-sign {
     margin-left: 5px;
     margin-bottom: 5px;
     height: 17px;
