--- a/styles/scss/app.scss
+++ b/styles/scss/app.scss
@@ -15,7 +15,6 @@
 body {
     margin: 0;
     padding: 0;
-
     background-color: $palette-background-primary;
     font-family: $font--famaly-primary;
     color: $palette-text-primary;
@@ -31,28 +30,28 @@ a {
 
 .wrapper {
     margin: auto;
-    @media (max-width: 320px) {
+    @include max-media(s) {
         padding: 10px;
     }
-    @media (min-width: 320px) {
+    @include media(s) {
         width: 280px;
     }
-    @media (min-width: 375px) {
+    @include media(xs) {
         width: 330px;
     }
-    @media (min-width: 425px) {
+    @include media(ms) {
         width: 410px;
     }
-    @media (min-width: 540px) {
+    @include media(xm) {
         width: 500px;
     }
-    @media (min-width: 768px) {
+    @include media(m) {
         width: 672px;
     }
-    @media (min-width: 1024px) {
+    @include media(ml) {
         width: 1000px;
     }
-    @media (min-width: 1280px) {
+    @include media(l) {
         width: 1200px;
     }
 }
@@ -115,7 +114,7 @@ a {
 }
 
 .p-l-r40 {
-    @media (min-width: 1024px) {
+    @include media(ml) {
         padding: 0 40px;
     }
 }
@@ -135,55 +134,20 @@ a {
 
 .bg-morten-harket {
     background-image: url("/images/Morten_Harket.png");
-    @media (max-width: 320px) {
+    @include max-media(s) {
         background-position: 75%;
     }
-    @media (max-width: 375px) {
+    @include max-media(xs) {
         background-position: 70%;
     }
-    @media (max-width: 425px) {
-        background-position: 60%;
-    }
-    @media (max-width: 425px) {
+    @include max-media(ms) {
         background-position: 65%;
     }
-    @media (min-width: 425px) and (max-width: 1024px) {
+    @include max-media(ml) {
         background-position: 70%;
     }
-}
-
-.display-flex {
-    display: flex;
-}
-
-.f-direction-column {
-    flex-direction: column;
-}
-
-.justify-content-between {
-    justify-content: space-between;
-}
-
-.f-content-start {
-    justify-content: flex-start;
-}
-
-.f-align-center {
-    align-items: center;
-}
-
-.list-style-none {
-    list-style-type: none;
-}
-
-.txt-decor-none {
-    text-decoration: none;
 }
 
 .txt-center {
     text-align: center;
-}
-
-.txt-start {
-    text-align: start;
 }
